# Effects-of-poisoning-attacks-on-cdrl

./: pyproject.toml  run-experiments.py
Experiments/: cdt4rec-clusterRewardInvId.yaml  cdt4rec-reward-poisoning-new-method.yaml  cdt4rec-stateRewardInvId.yaml  ddpg-reward-poisoning.yaml  nocdt4rec-clusterRewardInvId.yaml  nocdt4rec-stateRewardInvId.yaml  nocdt4rec2-reward-poisoning-new-method.yaml  poison-trajectories.ipynb  utils.py
Experiments/.ipynb_checkpoints/: analyze-yaml-checkpoint.ipynb
VirtualTaobao/: pyproject.toml
VirtualTaobao/tests/: test_virtualtaobao.py
VirtualTaobao/virtualtaobao/: __init__.py
VirtualTaobao/virtualtaobao/envs/: __init__.py  virtualTB.py
VirtualTaobao/virtualtaobao/model/: ActionModel.py  LeaveModel.py  UserModel.py
cdt4rec/: pyproject.toml
cdt4rec/cdt4rec/: __init__.py  main.py  utils.py
cdt4rec/cdt4rec/data/: TB-rewardInv-10.0-expert.pkl
cdt4rec/cdt4rec/evaluation/: evaluate_episodes.py
cdt4rec/cdt4rec/models/: CDT4Rec backdoor.py  CDT4Rec.py  DDPG.py  noCDT4Rec.py  noCDT4Rec2.py
cdt4rec/cdt4rec/training/: seq_trainer.py  seq_trainer_backdoors.py  trainer.py
cdt4rec/tests/: test_cdt4rec.py
ddpg-pytorch/: pyproject.toml
ddpg-pytorch/ddpg_pytorch/: DDPG.py  main.py  utils.py
ddpg-pytorch/tests/: test_ddpg_pytorch.py
poisoning-triggers/: pyproject.toml
poisoning-triggers/poisoning_triggers/: __init__.py  triggers.py
poisoning-triggers/poisoning_triggers/.ipynb_checkpoints/: triggers-checkpoint.py
poisoning-triggers/tests/: test_poisoning_triggers.py
simulator/: README.rst  pyproject.toml
simulator/models/: LMF-ml-100k-1-0.1-30-309659.pt  LMF-ml-100k-300-0.1-30-550847.pt  LMF-ml-100k-300-0.1-30-707467.pt
simulator/simulator/: __init__.py  dataloaders.py  environment.py  environment.py.bak  model.py  train.py  utils.py
