[tool.poetry]
name = "cdt4rec"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gym = "0.26.2"
torch = "2.2.1"
tqdm = "4.66.2"
transformers = "4.38.2"
#matplotlib = "3.8.3"
numpy = "1.26.4"
tokenizers = "0.15.2"
poisoning-triggers = {path="../poisoning-triggers", develop = true}
#ipykernel = "^6.29.3"
virtualtaobao = {path="../VirtualTaobao", develop = true}





[tool.poetry.dev-dependencies]
black = "^24.3.0"
memory-profiler = "^0.61.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = [ "py310",]

[tool.pylint]
#extension-pkg-whitelist = "torch"
generated-members="torch.*"
