[tool.poetry]
name = "poisoning-triggers"
version = "0.1.0"
description = ""
authors = ["Patrick <patrickl@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.10"
gym = "^0.26.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = [ "py310",]
