[tool.poetry]
name = "simulator"
version = "0.1.0"
description = ""
authors = ["Patrick <patrickl@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
torch = "^2.2.1"
tqdm = "^4.66.2"
pandas = "^2.2.1"
gymnasium = "^0.29.1"
scikit-learn = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^24.3.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
generated-members="torch.*"
